style.css
*{
  box-sizing: border-box;
  line-height:1.25em;
}

.education{

}

h1 {
  margin: 0px;
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  gap: 2rem;
  line-height: 1;
}

h1 > span:last-child {
  float: none !important;
  text-align: right;
  white-space: nowrap;
  line-height: 1.2 !important;
}

h1 > span:first-child {
  white-space: nowrap;
}

.contact {
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-end;
  gap: 0.25rem 0.5rem;
  font-family: monospace;
  font-size: 0.4em;
  font-weight: 100;
  padding-bottom: 0.2rem;
}

.skills > div{
  display:flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}


/* .software-projects > ul > li {
  display: flex;
  flex-direction: row;
}


.software-projects > ul > li > a{
  white-space: nowrap;
} */


.section{
  border-bottom: 1px solid #222;
  padding-bottom: 0.6rem;
}

.work, .skills, .education, .software-projects {
    margin-top:0.85rem;
}


.skills ul {
    padding: 0px 0px 0px 2em;
    /* line-height: 1.1em; */
}


h2{
  margin-top: 0;
  margin-bottom:0.25rem;
}

.skills ul li {
    line-height: 1.0em;
}

ul {
  padding-left:1.45em;
}


/* work and education bullets */
.work > ul > li, .education > ul > li {
    margin: 0;
    padding:0.45em 0;
    transition: 0.3s all;
}

.work > ul > li > div, .education > ul > li > div {
  display: flex;
  flex-direction: row;
  gap: 2rem;
  justify-content: space-between;
}

.work > ul > li > div > div, .education > ul > li > div > div {
  max-width:72%;
}

.section > ul > li:hover, .section > div > ul > li:hover {
    background:rgba(200,200,200,0.4);
    border-radius:4px;
}

/* work and education locations and dates */
.work > ul > li > div > span, .education > ul > li > div > span {
    font-weight: bold;
    text-align: center;
    display: inline-block;
    flex: 0 0 13.5em;
}

.section > ul {
  margin-top: 0px;
  margin-bottom: 0;
}





/* Animations Begin */

@keyframes chromaberation {


  0% {
  text-shadow:0.00px 0.00px 0.00px red,
                -0.00px 0.00px 0.00px green,
                0.00px -0.00px 0.00px blue; 
 } 




 3% {
  text-shadow:0.31px 0.07px 0.35px red,
                -0.21px 0.23px 0.35px green,
                -0.10px -0.30px 0.35px blue; 
 } 




 6% {
  text-shadow:0.58px 0.27px 0.72px red,
                -0.53px 0.37px 0.72px green,
                -0.06px -0.64px 0.72px blue; 
 } 




 10% {
  text-shadow:0.78px 0.60px 1.09px red,
                -0.91px 0.38px 1.09px green,
                0.12px -0.98px 1.09px blue; 
 } 




 13% {
  text-shadow:0.87px 1.02px 1.49px red,
                -1.32px 0.24px 1.49px green,
                0.45px -1.26px 1.49px blue; 
 } 




 17% {
  text-shadow:0.80px 1.52px 1.91px red,
                -1.71px -0.06px 1.91px green,
                0.91px -1.45px 1.91px blue; 
 } 




 20% {
  text-shadow:0.56px 2.03px 2.34px red,
                -2.04px -0.53px 2.34px green,
                1.48px -1.50px 2.34px blue; 
 } 




 24% {
  text-shadow:0.14px 2.52px 2.81px red,
                -2.25px -1.14px 2.81px green,
                2.12px -1.38px 2.81px blue; 
 } 




 27% {
  text-shadow:-0.48px 2.94px 3.30px red,
                -2.30px -1.88px 3.30px green,
                2.78px -1.05px 3.30px blue; 
 } 




 31% {
  text-shadow:-1.28px 3.21px 3.84px red,
                -2.14px -2.71px 3.84px green,
                3.42px -0.50px 3.84px blue; 
 } 




 34% {
  text-shadow:-2.24px 3.30px 4.43px red,
                -1.74px -3.59px 4.43px green,
                3.98px 0.29px 4.43px blue; 
 } 




 37% {
  text-shadow:-3.32px 3.15px 5.09px red,
                -1.06px -4.45px 5.09px green,
                4.39px 1.30px 5.09px blue; 
 } 




 41% {
  text-shadow:-4.51px 2.71px 5.85px red,
                -0.10px -5.26px 5.85px green,
                4.60px 2.55px 5.85px blue; 
 } 




 44% {
  text-shadow:-5.79px 1.95px 6.78px red,
                1.20px -5.99px 6.78px green,
                4.58px 4.04px 6.78px blue; 
 } 




 48% {
  text-shadow:-7.29px 0.79px 8.14px red,
                2.96px -6.71px 8.14px green,
                4.33px 5.91px 8.14px blue; 
 } 




 51% {
  text-shadow:-7.29px -0.79px 8.14px red,
                4.33px -5.91px 8.14px green,
                2.96px 6.71px 8.14px blue; 
 } 




 55% {
  text-shadow:-5.79px -1.95px 6.78px red,
                4.58px -4.04px 6.78px green,
                1.20px 5.99px 6.78px blue; 
 } 




 58% {
  text-shadow:-4.51px -2.71px 5.85px red,
                4.60px -2.55px 5.85px green,
                -0.10px 5.26px 5.85px blue; 
 } 




 62% {
  text-shadow:-3.32px -3.15px 5.09px red,
                4.39px -1.30px 5.09px green,
                -1.06px 4.45px 5.09px blue; 
 } 




 65% {
  text-shadow:-2.24px -3.30px 4.43px red,
                3.98px -0.29px 4.43px green,
                -1.74px 3.59px 4.43px blue; 
 } 




 68% {
  text-shadow:-1.28px -3.21px 3.84px red,
                3.42px 0.50px 3.84px green,
                -2.14px 2.71px 3.84px blue; 
 } 




 72% {
  text-shadow:-0.48px -2.94px 3.30px red,
                2.78px 1.05px 3.30px green,
                -2.30px 1.88px 3.30px blue; 
 } 




 75% {
  text-shadow:0.14px -2.52px 2.81px red,
                2.12px 1.38px 2.81px green,
                -2.25px 1.14px 2.81px blue; 
 } 




 79% {
  text-shadow:0.56px -2.03px 2.34px red,
                1.48px 1.50px 2.34px green,
                -2.04px 0.53px 2.34px blue; 
 } 




 82% {
  text-shadow:0.80px -1.52px 1.91px red,
                0.91px 1.45px 1.91px green,
                -1.71px 0.06px 1.91px blue; 
 } 




 86% {
  text-shadow:0.87px -1.02px 1.49px red,
                0.45px 1.26px 1.49px green,
                -1.32px -0.24px 1.49px blue; 
 } 




 89% {
  text-shadow:0.78px -0.60px 1.09px red,
                0.12px 0.98px 1.09px green,
                -0.91px -0.38px 1.09px blue; 
 } 




 93% {
  text-shadow:0.58px -0.27px 0.72px red,
                -0.06px 0.64px 0.72px green,
                -0.53px -0.37px 0.72px blue; 
 } 




 96% {
  text-shadow:0.31px -0.07px 0.35px red,
                -0.10px 0.30px 0.35px green,
                -0.21px -0.23px 0.35px blue; 
 } 

}

@keyframes fadein {
  from {
    opacity: 0%;
  }

  85% {
    opacity: 100%;
  }

  to {
    opacity:100%;
  }
}

@keyframes bump {
  from {
    transform: translate(0em, 2em);
  }

  70% {
    transform: translate(0em, 0em);
    transform: rotate3d(0,0,1,-2deg);
    transform-style:preserve-3d;
  }

  85% {
    transform: rotate3d(0,0,1,2deg);
    transform-style:preserve-3d;
  }

  to {
    transform: rotate3d(0,0,1,0deg);
    transform-style:preserve-3d;
    opacity:100%;
  }
}

@keyframes bodyAnimation {
  from {
    opacity: 0%;
    transform: scale(1) rotate3d(0,0,1,-4deg) translate(0rem, 4rem);
    transform-style: preserve-3d;
  }


  to {
    transform: scale(0.85) rotate3d(0,0,1,-4deg) translate(-3rem, -3rem);
    transform-style: preserve-3d;
    opacity:100%;
  }
}

/* Animations End */

/* Mobile / Desktop / Tablet */
@media screen {
  html{
    color: transparent;
    background-color: #f7f7f7;
    opacity: 1;
    background-image:  repeating-linear-gradient(45deg, #ffffff 25%, transparent 25%, transparent 75%, #ffffff 75%, #ffffff), repeating-linear-gradient(45deg, #ffffff 25%, #efefef 25%, #f7f7f7 75%, #ffffff 75%, #ffffff);
    animation: pulse 60s cubic-bezier(1, 0, 0, 1) infinite;

  }

  @keyframes pulse {
      0%, 10%, 90%, 100%{ 
        background-position: 0 0, 50% 50%;
        background-size: 25% 25%;
      }
      40%, 60% { 
        background-position: 0 0, 50% 50%;
        background-size: 12.5% 12.5%;
      }
  }

  body {
    background: white;
    color: #1c1c1c;
    box-shadow: 0 1.25rem 4rem -1.5rem rgb(120,120,120);
    padding: 2.5rem 6rem;
    width: 74rem;
    max-width:92%;
    font-size: 1.05rem;
    transition: 1s all;
  }

  h1 {
    opacity:1;
  }

  div{
    transition: 1s all;
  }


  .education, .skills, .work, .software-projects {
    opacity: 1;
  }

  .education { animation-delay: 0.8s;}
  .skills { animation-delay: 1.2s;}
  .work { animation-delay: 1.6s;}
  .software-projects { animation-delay: 2.0s;}
}

/* Mobile */
@media screen and (max-width: 700px) {
  .skills > div {
    display: block;
  }

  h1 {
    display: block;
  }

  h1 > span {
    display: block;
  }

  h1 > span:last-child {
    text-align: left;
    white-space: normal;
    padding-top: 0.6rem !important;
  }

  .contact {
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 0.2rem 0.5rem;
  }

  .contact-separator {
    display: none;
  }

  .work > ul > li > div, .education > ul > li > div {
    display: block;
  }

  .work > ul > li > div > div, .education > ul > li > div > div {
    max-width: 100%;
  }

  .work > ul > li > div > span, .education > ul > li > div > span {
    display: block;
    width: auto;
    text-align: left;
    margin-top: 0.25rem;
  }

  body{
    margin:0;
    transform: rotate(0deg);
    background: transparent;
    padding:1.2rem;
    box-shadow:none;
  }
}

@media screen and (min-width: 701px) and (max-width: 1000px) {
  body {
    padding: 2.2rem 3.5rem;
  }

  h1 {
    display: block;
  }

  h1 > span {
    display: block;
  }

  h1 > span:last-child {
    text-align: left;
    white-space: normal;
  }

  .contact {
    flex-wrap: wrap;
    justify-content: flex-start;
    padding-top: 0.5rem;
  }

  .contact-separator {
    display: none;
  }
}

/* Desktop */
@media screen and (min-width:701px) {
  body {
      margin: 3rem auto;
      transform: none;
  }
}

/* Full Desktop CSS styles - paper-on-a-desk falling and landing tilted effect */
@media screen and (min-width:1001px) {
  body {
      opacity: 0;
      animation-name: bodyAnimation;
      animation-duration: 1.5s;
      animation-timing-function: cubic-bezier(0.25, 1, 0.5, 1);
      animation-fill-mode: forwards;
      transform-origin: center center;
  }
}

/* Print (to pdf or otherwise) */
@media print {

    @page {
        margin: 0.6in 0.5in 0.5in 0.5in;
    }

    html, body {
        scroll-behavior: auto !important;
    }

    body{
        padding: 0;
        margin: 0;
        max-width:100ch;
        font-size: 10pt;
    }

    .education >h2, 
    .skills >h2, 
    .work >h2, 
    .software-projects >h2 {
        margin-bottom:0.08rem;
        margin-top:0.0rem;
        break-after: avoid;
        page-break-after: avoid;
    }

    hr {
        display: none;
    }

    .section {
        break-inside: avoid;
        page-break-inside: avoid;
        padding-bottom: 0.35rem;
        margin-top: 0.35rem;
    }

    /* Remove redundant horizontal borders at page breaks or end of document */
    .print-no-border {
        border-bottom: none !important;
    }

    .section > ul > li,
    .work > ul > li,
    .education > ul > li {
        break-inside: avoid;
        page-break-inside: avoid;
    }

    .work > ul > li,
    .education > ul > li {
        padding: 0.25em 0;
    }

    .work > ul > li > div,
    .education > ul > li > div {
        gap: 1rem;
    }

    .work > ul > li > div > span,
    .education > ul > li > div > span {
        flex-basis: 12.5em;
    }

    body, html {
        transition: none !important;
        animation: none !important;
        opacity: 1 !important;
        transform: none !important;
    }

}

